force-app/main/default/objects/CPIEmails__c/CPIEmails__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting created for CPI Tracking requirement to send email alerts in case of failed insertion into CPI object</description>
    <label>CPIEmails</label>
</CustomObject>