force-app/main/default/objects/CPIEmails__c/fields/CPI_CC_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>CPI_CC_Email_Addresses__c</fullName>
    <label>CPI CC Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>