force-app/main/default/objects/CPIEmails__c/fields/CPI_Email_Reply_To_Address__c.field-meta.xml
<CustomField>
    <fullName>CPI_Email_Reply_To_Address__c</fullName>
    <label>CPI Email Reply To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>