force-app/main/default/objects/CPIEmails__c/fields/CPI_Email_Sender_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>CPI_Email_Sender_Display_Name__c</fullName>
    <label>CPI Email Sender Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>