force-app/main/default/objects/CPIEmails__c/fields/CPI_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>CPI_Email_Subject__c</fullName>
    <label>CPI Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>