force-app/main/default/objects/CPIEmails__c/fields/CPI_Email_To_Addresses__c.field-meta.xml
<CustomField>
    <fullName>CPI_Email_To_Addresses__c</fullName>
    <label>CPI Email To Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>